[package]
name = "nyctograph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore-web = "0.8.0-beta.6"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
sycamore = { version = "0.8.0-beta.6", features = ["serde", "suspense"] }
uuid = { version = "0.8.2", features = ["serde", "v4", "wasm-bindgen"] }
wasm-bindgen = "0.2.79"
rexie = "0.4"
serde-wasm-bindgen = "0.4.3"
num-traits = { version = "0.2.15", default-features = false }

[dependencies.web-sys]
features = ["InputEvent", "KeyboardEvent", "Location", "Storage", 'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window', 'IdbFactory',]
version = "0.3.56"